--- a/gemini-fastapi/config.yaml
+++ b/gemini-fastapi/config.yaml
@@ -1,6 +1,6 @@
 name: Gemini FastAPI
 slug: gemini_fastapi
-version: "0.1.0"
+version: "0.1.1"
 description: OpenAI-compatible router that proxies Google Gemini for Home Assistant.
 url: https://github.com/luuquangvu/ha-addons/tree/main/gemini-fastapi
 arch:
@@ -21,7 +21,9 @@ map:
   - data:rw
 
 environment:
+  CONFIG_SERVER__HOST: 0.0.0.0
+  CONFIG_SERVER__PORT: 8000
   GEMINI_COOKIE_PATH: /app/cache
 
 watchdog: "http://[HOST]:[PORT:8000]/health"
-webui: "http://[HOST]:[PORT:8000]"
+webui: "http://[HOST]:[PORT:8000]/docs"
