--- a/gemini-fastapi/config.yaml
+++ b/gemini-fastapi/config.yaml
@@ -19,5 +19,6 @@ map:
 environment:
   CONFIG_SERVER__HOST: 0.0.0.0
   CONFIG_SERVER__PORT: '8000'
+  CONFIG_GEMINI__TIMEOUT: '120'
   GEMINI_COOKIE_PATH: /app/cache
 webui: http://[HOST]:[PORT:8000]/docs
