--- a/repository.yaml
+++ b/repository.yaml
@@ -1,3 +1,3 @@
-name: Luu Quang Vu Home Assistant add-ons
+name: Luu Quang Vu Home Assistant Apps (formerly known as add-ons)
 url: https://github.com/luuquangvu/ha-addons
 maintainer: luuquangvu
