--- a/gemini-fastapi/Dockerfile
+++ b/gemini-fastapi/Dockerfile
@@ -1,4 +1,19 @@
-FROM ghcr.io/luuquangvu/gemini-fastapi:latest
+FROM ghcr.io/luuquangvu/gemini-fastapi:20260218-a48c38d
+
+LABEL \
+    io.hass.name="Gemini FastAPI" \
+    io.hass.description="OpenAI-compatible router that proxies Google Gemini for Home Assistant." \
+    io.hass.arch="amd64|aarch64" \
+    io.hass.type="addon" \
+    io.hass.version="1.0.46" \
+    org.opencontainers.image.title="Gemini FastAPI" \
+    org.opencontainers.image.description="OpenAI-compatible router that proxies Google Gemini for Home Assistant." \
+    org.opencontainers.image.vendor="Luu Quang Vu" \
+    org.opencontainers.image.authors="Luu Quang Vu <https://github.com/luuquangvu>" \
+    org.opencontainers.image.licenses="MIT" \
+    org.opencontainers.image.url="https://github.com/luuquangvu/ha-addons/tree/main/gemini-fastapi" \
+    org.opencontainers.image.source="https://github.com/luuquangvu/ha-addons" \
+    org.opencontainers.image.documentation="https://github.com/luuquangvu/ha-addons/blob/main/gemini-fastapi/README.md"
 
 USER root
 
